# attoparsecpp

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  benchpress.nix  build.nix  catch.nix  default.nix  flake.nix  googlebench.nix  main.cpp  parser.hpp  release.nix
benchmark/: CMakeLists.txt  Makefile  README.md  main.cpp
gtest/: CMakeLists.txt  math_expression.cpp
include/: math_expression.hpp  parser.hpp
include/attoparsecpp/: math_expression.hpp  parser.hpp
nix/: build.nix  googlebench.nix  sources.json
test/: .gitignore  CMakeLists.txt  Makefile  README.md  gcovr.cfg.in  gdb.cpp  ini.cpp  main.cpp  math_expression.cpp  test.cpp
